# MetrologicalTraining

./: .gitignore  CMakeLists.txt  README.md
projects/: Coding Standard - C++.doc  (+1 more)
projects/Netflix/OCDM-Null2-Ubuntu18/: .cproject  CMakeLists.txt  MediaKeySession.cpp  MediaKeySession.h
projects/Netflix/ocdmtestapp04/: CMakeLists.txt  main.cpp
projects/WPEFramework/ocdm02/WPEFrameworkOCDM/: .cproject  .project  AccessorOCDM.cpp  AccessorOCDM.h  CMakeLists.txt  DataExchange.cpp  DataExchange.h  IOCDM.h  Module.h  ProxyStubs.cpp  createBackup.sh  open_cdm.cpp  open_cdm.h
projects/WPEFramework/ocdm02/WPEFrameworkOCDM/backup/: working0001.tgz  working0002.tgz
projects/WPEFramework/ocdm02/ocdmtestapp01/: .cproject  CMakeLists.txt  build.sh  main.cpp
projects/WPEFramework/ocdm02/ocdmtestapp02/: .cproject  .project  CMakeLists.txt  main.c
projects/WPEFramework/ocdm03/ocdmtestapp03/: .cproject  CMakeLists.txt  main.c
projects/WPEFramework/plugins/OutOfProcessTest/: .gitignore  CMakeLists.txt  Module.h  OutOfProcessImplementation.cpp  OutOfProcessTest.cpp  OutOfProcessTest.h
projects/WPEFramework/tests01/repos/framework01/: CMakeLists.txt
projects/rdk-7271-wip/WPEFramework/: .gitignore  CMakeLists.txt  README.md
projects/rdk-7271-wip/WPEFramework/Source/: CMakeLists.txt  Config.json  WPEFramework.pc.in
projects/rdk-7271-wip/WPEFramework/Source/WPEFramework/: CMakeLists.txt  Controller.cpp  Controller.h  DownloadEngine.h  Module.h  PluginHost.cpp  PluginServer.cpp  PluginServer.h  Probe.cpp  Probe.h  SystemInfo.cpp  SystemInfo.h  UI
projects/rdk-7271-wip/WPEFramework/Source/WPEProcess/: CMakeLists.txt  Module.h  Process.cpp
projects/rdk-7271-wip/WPEFramework/Source/cmake/: FindGTEST.cmake  add_defines.cmake  dump_vars.cmake  setup_default_options.cmake  setup_target_properties_executable.cmake  setup_target_properties_library.cmake  show_target_properties.cmake
projects/rdk-7271-wip/WPEFramework/Source/core/: ASN1.h  CMakeLists.txt  CyclicBuffer.cpp  CyclicBuffer.h  DataBuffer.h  DataElement.cpp  DataElement.h  DataElementContainer.h  DataElementFile.cpp  DataElementFile.h  DataStorage.h  Enumerate.h  Factory.h  FileSystem.cpp  FileSystem.h  Frame.h  IAction.h  IIterator.h  ILogService.h  IPCChannel.h  IPCConnector.h  ISO639.cpp  ISO639.h  JSON.cpp  JSON.h  Library.cpp  Library.h  Link.h  LockableContainer.h  LogService.cpp  LogService.h  Logger.cpp  Measurement.h  Media.h  NetworkInfo.cpp  NetworkInfo.h  NodeId.cpp  NodeId.h  Number.cpp  Number.h  (+47 more)
projects/rdk-7271-wip/WPEFramework/Source/cryptalgo/: AES.cpp  AES.h  AESImplementation.cpp  CMakeLists.txt  HMAC.h  Hash.cpp  Hash.h  HashStream.h  Integer.h  MultiPrecisionInteger.h  Random.cpp  Random.h  cryptalgo.h
projects/rdk-7271-wip/WPEFramework/Source/interfaces/: CMakeLists.txt  IBrowser.h  IComposition.h  IElement.h  IKeyHandler.h  IMemory.h  INetflix.h  IOpenCDMi.h  IResourceCenter.h  ISwitchBoard.h  ITimeSync.h  IVoiceHandler.h  IWebDriver.h  Module.h  ProxyStubs.cpp
projects/rdk-7271-wip/WPEFramework/Source/plugins/: CMakeLists.txt  Channel.cpp  Channel.h  Configuration.h  IPlugin.h  IRPCIterator.h  IShell.h  IStateControl.h  ISystemInfo.h  Logging.cpp  Logging.h  MetaData.cpp  MetaData.h  Module.h  Service.cpp  Service.h  Shell.cpp  StateControl.cpp  VirtualInput.cpp  VirtualInput.h  plugins.h  wpeframework.pc.in
projects/rdk-7271-wip/WPEFramework/Source/protocols/: CMakeLists.txt  Module.h
projects/rdk-7271-wip/WPEFramework/Source/provisionproxy/: CMakeLists.txt  IPCProvision.h  ipclink.cpp
projects/rdk-7271-wip/WPEFramework/Source/proxystubs/: CMakeLists.txt  Module.h  PluginInterface.cpp
projects/rdk-7271-wip/WPEFramework/Source/rpc/: Administrator.h  CMakeLists.txt  Communicator.cpp  Communicator.h  ITracing.cpp  IUnknown.cpp  IUnknown.h  Messages.h  Module.h  ObjectMessageHandler.h  rpc.h  rpc.vcxproj
projects/rdk-7271-wip/WPEFramework/UI/: common.js  index.html  style.css
projects/rdk-7271-wip/WPEFramework/tests/: CMakeLists.txt
projects/rdk-7271-wip/WPEFramework/unittests/: CMakeLists.txt  main.cpp
projects/rdk-7271-wip/WPEFrameworkCompositor/: CMakeLists.txt  Compositor.cpp  Compositor.h
projects/rdk-7271-wip/WPEFrameworkCompositor/cmake/: FindBcmNxServer.cmake  FindEGL.cmake  FindGLESv2.cmake
projects/rdk-7271-wip/WPEFrameworkCompositor/lib/: CMakeLists.txt
projects/rdk-7271-wip/WPEFrameworkCompositor/server/: CMakeLists.txt  platformserver.cpp
projects/rdk-7271-wip/WPEFrameworkOpen/: CMakeLists.txt
projects/rdk-7271-wip/WPEFrameworkOpen/Commander/: CMakeLists.txt  Commander.cpp  Commander.h
projects/rdk-7271-wip/WPEFrameworkOpen/DeviceInfo/: CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.h
projects/rdk-7271-wip/WPEFrameworkOpen/LocationSync/: CMakeLists.txt  LocationService.cpp  LocationService.h  LocationSync.cpp  LocationSync.h  LocationSync.json
projects/rdk-7271-wip/WPEFrameworkOpen/Monitor/: CMakeLists.txt  Monitor.cpp  Monitor.h  Monitor.json
projects/rdk-7271-wip/WPEFrameworkOpen/RemoteControl/: CMakeLists.txt  IRRemote.cpp  IRRemote.h  RemoteAdministrator.cpp  RemoteAdministrator.h  RemoteControl.cpp  RemoteControl.h  RemoteControl.json
projects/rdk-7271-wip/WPEFrameworkOpen/Snapshot/: CMakeLists.txt  Module.h  Snapshot.cpp  Snapshot.h
projects/rdk-7271-wip/WPEFrameworkOpen/TimeSync/: CMakeLists.txt  NTPClient.cpp  NTPClient.h  TimeSync.cpp  TimeSync.h  TimeSync.json
projects/rdk-7271-wip/WPEFrameworkOpen/TraceControl/: CMakeLists.txt  TraceControl.cpp  TraceControl.h  TraceOutput.h
projects/rdk-7271-wip/WPEFrameworkOpen/WebKitBrowser/: CMakeLists.txt  HTML5Notification.h  WebKitBrowser.cpp  WebKitBrowser.h  WebKitImplementation.cpp
projects/rdk-7271-wip/WPEFrameworkOpen/WebProxy/: CMakeLists.txt  WebProxy.cpp  WebProxy.h
projects/rdk-7271-wip/WPEFrameworkOpen/WebServer/: CMakeLists.txt  WebServer.cpp  WebServer.h  WebServer.json  WebServerImplementation.cpp
projects/rdk-7271-wip/WPEFrameworkOpen/WebShell/: CMakeLists.txt  WebShell.cpp  WebShell.h  WebShell.json
projects/rdk-7271-wip/WPEFrameworkOpen/cmake/: FindVirtualInput.cmake
(+809 files in other folders)
