set(target_name platformplugin)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

if ("${WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION}" STREQUAL "None" OR
    "${WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION}" STREQUAL "OFF")
    message(FATAL_ERROR "WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION not correctly set: ${WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION}")
endif()

add_subdirectory (${WPEFRAMEWORK_PLUGIN_COMPOSITOR_IMPLEMENTATION})
